# QNeuralNet

./: CMakeLists.txt  README  example_net.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  network.cpp  network.h  neuron.cpp  neuron.h  race-client.cpp  race-client.h
